--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,92 @@
+html{
+  margin:0;
+}
+
 body {
-  margin: 0;
+  margin: 0 0;
+  padding: 0;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.signup_in{
+  margin: 0 0;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(180deg, #FFA751 0%, #EB6F69 100%);
+}
+
+section > h1{
+  margin: 0 0;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  margin-left: 30px;
+  font-weight: bold;
+  font-size: 3rem;
+  padding-top: 20px;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 16px;
+}
+
+form > input {
+  border: 0.3px solid rgba(160, 160, 160, 0.5);
+  margin: 10px;
+  height: 40px;
+  margin-left: 10px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.infobox{
+  background-color: white;
+  margin: 32px; 
+  border-radius: 20px;
+  margin-top: 5vh;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  height: 530px;
+}
+
+.infobox > h2{
+  color: #E86970;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.infobox > link{
+  color: #F19E5C
+}
+
+h2{
+  margin-left:150px;
+  padding-top: 50px;
+}
+
+p{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+button{
+  background: radial-gradient(125% 125% at 49.83% 0%, #F4B257 0%, #EB6F69 100%);
+  border-radius: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.17);
+  color: white;
+  font-weight: bold;
+  width: 295px;
+  height:40px;
+  margin-bottom: 20px;
 }
