--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,15 +24,19 @@ code {
   background: linear-gradient(180deg, #FFA751 0%, #EB6F69 100%);
 }
 
-section > h1{
+.title{
+  padding-top: 10%;
+}
+
+section > .title > h1{
   margin: 0 0;
   color: white;
   font-weight: bold;
   display: flex;
-  margin-left: 30px;
+  margin-left: 50px;
   font-weight: bold;
   font-size: 3rem;
-  padding-top: 20px;
+  line-height: 45px;
 }
 
 form{
@@ -45,17 +49,19 @@ form{
 form > input {
   border: 0.3px solid rgba(160, 160, 160, 0.5);
   margin: 10px;
-  height: 40px;
+  height: 45px;
   margin-left: 10px;
   border-radius: 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  padding-left: 30px;
+  font-size: 1.1rem;
 }
 
 .infobox{
   background-color: white;
   margin: 32px; 
   border-radius: 20px;
-  margin-top: 5vh;
+  margin-top: 2vh;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   height: 530px;
 }
@@ -65,28 +71,136 @@ form > input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   font-size: xx-large;
+  margin-right: -30px;
 }
 
 .infobox > link{
   color: #F19E5C
 }
 
-h2{
+.h2{
   margin-left:150px;
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 p{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-button{
+.linkSignup{
+  color: #FFA751;
+}
+
+.botonSignupin{
   background: radial-gradient(125% 125% at 49.83% 0%, #F4B257 0%, #EB6F69 100%);
   border-radius: 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.17);
   color: white;
   font-weight: bold;
   width: 295px;
-  height:40px;
+  height: 45px;
   margin-bottom: 20px;
+  font-size: 1.2rem;
+}
+.css-n5gi9c{
+  border: 0.3px solid rgba(160, 160, 160, 0.5);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  border-radius: 20px;
+}
+
+.signup_infooter{
+  margin-top: 40px;
+}
+
+.createFood{
+  background-color: #EBE8E8;
+  margin: 16px;
+  border-radius: 10px;
+}
+.uploadImage{
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  height: 170px;
+  background-color: #EBE8E8;
+  margin: 16px;
+}
+
+.uploadImage > input{
+  background: #FFA751;
+  width: 120px;
+  height: 31px;
+  left: 128px;
+  margin-top: 100px;
+  border-radius: 5px;
+  color:white;
+  font-weight: bold;
+}
+
+.uploadItem{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 16px;
+  margin-right: 16px;
+  background-color: #EBE8E8;
+  border-radius: 10px;
+  padding-top: 5px;
+  height: 500px;
+}
+
+.uploadItem > label{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: initial;
+  margin-left: 20px;
+  font-size: 1.1rem;
+  margin-top: 3%;
+}
+
+.uploadItem > input{
+  border: 0.3px solid rgba(160, 160, 160, 0.5);
+  margin: 10px;
+  height: 45px;
+  margin-left: 16px;
+  margin-right: 16px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  padding-left: 30px;
+  font-size: 1.1rem;
+}
+
+.botonRegistro{
+  margin: auto;
+  background: #FFA751;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+nav{
+  position:absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+  width: 100%;
+  border-radius: 5px;
+  border: 0.5px solid #A6A6A6;
+  background:#ffffff;
+  height: 61px;
+  padding:5px;
+  margin-bottom: -5px;
+  position:fixed;
+  color: #878484;
+}
+
+.navbar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.active{
+  color: #FFA751;
 }
